--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -1,7 +1,15 @@
+@font-face {
+    font-family: Gilroy;
+    src: url(./Gilroy-Heavy.ttf);
+}
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Gilroy;
+    color:#fff
 }
 
 html,body{
@@ -10,7 +18,25 @@ html,body{
 }
 
 #page1{
-    height:100%;
+    height:100vh;
+    width:100%;
+    background-color: #111;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#page1 h1{
+    font-size: 9vw;
+    text-transform: uppercase;
+    font-weight: 900;
+    line-height: 8.5vw;
+
+}
+
+#page2{
+    height:100vh;
     width:100%;
     background-color: #111;
 }
