--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -17,6 +17,81 @@ html,body{
     width:100%;
 }
 
+nav{
+    position: fixed;
+    width:100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:2vw 10vw;
+}
+
+nav:hover #nav-bottom{
+    height:150%;
+    bottom: -150%;
+    background-color: #111;
+}
+
+
+#nav-bottom{
+    width:80%;
+    height:0%;
+    position: absolute;
+    bottom: 0%;
+    border-bottom: 1px solid #dadada;
+    transition: all ease 0.65s;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+
+    padding: 2vw 15vw;
+    padding-left: 18.5vw;
+    padding-top:3vw;
+}
+
+.bottom-div{
+    margin-top:2vw; /*  y */
+}
+
+.bottom-div h5{
+    overflow: hidden; /*  y */
+    margin-bottom:0.4vw;
+}
+
+.bottom-div h5 span{
+    font-size:0.75vw;
+    font-weight: 500;
+    display: inline-block;
+    opacity: 0;
+}
+.nav-part2{
+    display: flex;  
+    gap:2vw; 
+}
+
+.nav-part2 h4{
+    font-size: 0.76vw;
+    font-weight: 400;
+}
+
+nav button{
+    background-color: #0BA34E;
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    padding:12px 12px;
+    font-size: 0.85vw;
+    font-weight: 700;
+    border: none;
+    border-radius: 50px;
+}
+
+nav button svg{
+    height:0.85vw;
+    margin-left:4vw;
+}
+
+
 #page1{
     height:100vh;
     width:100%;
@@ -28,13 +103,55 @@ html,body{
 }
 
 #page1 h1{
-    font-size: 9vw;
+    font-size: 8vw;
     text-transform: uppercase;
     font-weight: 900;
     line-height: 8.5vw;
-
 }
 
+#page1 h1 svg{
+    background-color: #0DA34E;
+    border-radius: 50%;
+    height:6vw;
+    width:6vw;
+}
+
+#page1 h1 svg:hover{
+    rotate: -35deg;
+   transition: all ease 0.65s;
+   height:5.4vw;
+   width:5.4vw; 
+}
+
+
+#page1 p{
+    font-weight: 100;
+    font-size: 20px;
+    text-align: center;
+    padding: 10px 18px;
+}
+
+#page1-bottom{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   /* gap:10px  */
+}
+
+#page1-bottom h4{
+    font-weight: 400;
+    font-size: 1vw;
+    text-transform: lowercase;
+    margin-top:0.3vw;
+    padding:10px 10px;
+    border: 1px solid #727070;
+    border-radius: 50px;
+}
+
+#page1-bottom h4:nth-last-child(2){
+    border:none;
+    padding:2px;
+}
 #page2{
     height:100vh;
     width:100%;
