--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Gilroy;
-    src: url(./Gilroy-Heavy.ttf);
+    src: url(.//Gilroy-Medium.ttf);
 }
 
 
@@ -8,7 +8,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Gilroy;
+    /* font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
+    font-family: gilory;
     color:#fff
 }
 
@@ -19,59 +20,42 @@ html,body{
 
 nav{
     position: fixed;
+    /* background-color: rgb(122, 213, 180); */
     width:100%;
+    height:12vh;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     padding:2vw 10vw;
 }
 
-nav:hover #nav-bottom{
-    height:150%;
-    bottom: -150%;
-    background-color: #111;
-}
 
-
-#nav-bottom{
-    width:80%;
-    height:0%;
-    position: absolute;
-    bottom: 0%;
-    border-bottom: 1px solid #dadada;
-    transition: all ease 0.65s;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-
-    padding: 2vw 15vw;
-    padding-left: 18.5vw;
-    padding-top:3vw;
-}
-
-.bottom-div{
-    margin-top:2vw; /*  y */
-}
-
-.bottom-div h5{
-    overflow: hidden; /*  y */
-    margin-bottom:0.4vw;
-}
-
-.bottom-div h5 span{
-    font-size:0.75vw;
-    font-weight: 500;
-    display: inline-block;
-    opacity: 0;
-}
 .nav-part2{
     display: flex;  
+    align-items: flex-start;
     gap:2vw; 
+    padding:1vh 0vh;
+    position: relative;
+    z-index:10;
 }
 
 .nav-part2 h4{
-    font-size: 0.76vw;
+    font-size: 0.73vw;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 2.2vw;
+}
+
+.nav-part2 h5{
+    margin-bottom: 1vw;
+    /* background-color: red; */
+    display:none
+}
+
+.nav-part2 h5 span{
+    font-size:0.77vw;
     font-weight: 400;
+    display: inline-block;
 }
 
 nav button{
@@ -79,16 +63,27 @@ nav button{
     display: flex;
     align-items: center;
     text-transform: uppercase;
-    padding:12px 12px;
+    padding:12px 20px;
     font-size: 0.85vw;
     font-weight: 700;
     border: none;
     border-radius: 50px;
+    /* margin-bottom: 1vh; */
 }
 
 nav button svg{
-    height:0.85vw;
-    margin-left:4vw;
+    height:0.8vw;
+    margin-left:1.6vw;
+}
+
+#nav-bottom{
+    width:80%;
+    height:0vh;
+    position: absolute;
+    top: 100%;
+    background-color: #111;
+    border-bottom: 1px solid #fff;
+    z-index: 9;
 }
 
 
@@ -100,6 +95,7 @@ nav button svg{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
 }
 
 #page1 h1{
