--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -153,7 +153,7 @@ nav button svg{
 }
 
 #moving-div{
-    background-color: red;
+    /* background-color: red; */
     position: absolute;
     margin-top: 12vh;    /* */
     bottom: 3%;
@@ -165,6 +165,40 @@ nav button svg{
 
 #moving-div .move{
    display: inline-block;
+   /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+   animation-name: mobe;
+   animation-duration: 9s;
+   animation-timing-function: linear;
+   animation-iteration-count: infinite;
+}
+
+@keyframes mobe {
+    0%{
+        transform:translateX(0);
+    }
+    100%{
+        transform:translateX(-100%);
+    }
+}
+
+#left-blur{
+    position: absolute;
+    top:0;
+    left:0;
+    height:100%;
+    width:30%;
+    background:linear-gradient(to right,#111,transparent);
+    z-index: 2;
+}
+
+#right-blur{
+    position: absolute;
+    top:0;
+    right:0;
+    height:100%;
+    width:30%;
+    background:linear-gradient(to right,transparent,#111);
+    z-index: 2;
 }
 
 #moving-div .move img{
