--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -219,21 +219,59 @@ nav button svg{
     width:100%;
     background-color: #111;
     position: relative;
-    padding: 2vw 10.5vw;
+    padding: 0 10.4vw;
+    padding-bottom: 8vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-top: 1px solid #333;
 }
 
-#pag2-left{
-    background-color: rgb(238, 7, 7);
+#page2-left{
+    /* background-color: #333; */
     height:100%;
     width:40%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column;
+    padding:4vw 0vw;
 }
 
-#pag2-right{
-    background-color: rgb(227, 13, 13);
+#page2-left p{
+    font-size: 0.9vw;
+}
+
+#page2-left h5{
+    width:75%;
+    font-size: 1.2vw;
+    font-weight: 500;
+}
+
+#page2-right{
+    /* background-color:#333; */
     height:100%;
     width:50%;
+}
+
+.right-elem {
+    position: relative;
+    background-color: red;
+    padding-top: 2vw;
+    padding-bottom: 5vw;
+    border-bottom: 1px solid #333;
+}
+.right-elem h2{
+    font-size: 1.4vw;
+    font-weight: 400;
+}
+
+
+.right-elem img{
+    height:7vw;
+    width:7vw;
+    border-radius: 50%;
+    object-fit: cover;
+    opacity: 0;
+    position: absolute;
 }
