--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -256,7 +256,7 @@ nav button svg{
 
 .right-elem {
     position: relative;
-    background-color: red;
+    /* background-color: red; */
     padding-top: 2vw;
     padding-bottom: 5vw;
     border-bottom: 1px solid #333;
@@ -272,6 +272,7 @@ nav button svg{
     width:7vw;
     border-radius: 50%;
     object-fit: cover;
-    opacity: 0;
     position: absolute;
+    opacity: 0;
+    scale:0;
 }
