--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -20,7 +20,7 @@ html,body{
 
 nav{
     position: fixed;
-    /* background-color: rgb(122, 213, 180); */
+    background-color: #111;
     width:100%;
     height:12vh;
     display: flex;
@@ -47,9 +47,9 @@ nav{
 }
 
 .nav-part2 h4{
-    font-size: 0.73vw;
+    font-size: 0.8vw;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 1000;
     margin-bottom: 2.2vw;
 }
 
@@ -254,13 +254,32 @@ nav button svg{
     width:50%;
 }
 
+
 .right-elem {
     position: relative;
-    /* background-color: red; */
     padding-top: 2vw;
     padding-bottom: 5vw;
-    border-bottom: 1px solid #333;
+    border-top: 1px solid #333;
+    display: flex;
+    justify-content: space-between;
 }
+
+.right-elem:hover{
+    border-top: 2px solid #fff
+
+}
+.part{
+    display: flex;
+    /* justify-content: space-between; */
+    gap:25px
+}
+.right-elem i{
+    font-size:1.2vw;
+}
+.right-elem p{
+        color: rgb(120, 109, 109);
+}
+
 .right-elem h2{
     font-size: 1.4vw;
     font-weight: 400;
@@ -275,4 +294,70 @@ nav button svg{
     position: absolute;
     opacity: 0;
     scale:0;
+}
+
+#page3 {
+    height: 100vh;
+    width: 100%;
+    background-color: #111;
+    position: relative;
+    background-image: url(https://lazarev.kiev.ua/la24/reel-cover.webp);
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.page3-center {
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    padding: 1vw;
+    flex-direction: column;
+}
+
+.page3-center .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 3.3vw;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+.page3-center .icon i {
+    color: #000;
+    font-size: 2.8vw;
+
+}
+
+.page3-center h5 {
+    font-size: 0.8vw;
+    background-color: #fff;
+    color: #000;
+    border-radius: 50px;
+    padding: 12px 26px 10px 26px;
+    margin-top: 0.5vw;
+    font-weight: 700;
+    opacity: 0;
+    transition: all ease 0.5s;
+    transform: translateY(16%);
+    text-transform: uppercase;
+}
+
+.page3-center:hover h5 {
+    opacity: 1;
+    transform: translateY(0%);
+}
+
+#page3 video {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    object-fit: cover;
+    transform: scaleX(0.7) scaleY(0);
+    opacity: 0;
+    border-radius: 30px;
+    z-index: 99999;
 }
