--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -270,9 +270,9 @@ nav button svg{
 }
 .part{
     display: flex;
-    /* justify-content: space-between; */
-    gap:25px
+    gap:25px;
 }
+
 .right-elem i{
     font-size:1.2vw;
 }
@@ -360,4 +360,53 @@ nav button svg{
     opacity: 0;
     border-radius: 30px;
     z-index: 99999;
+}
+
+#page4{
+    height:100vh;
+    width:100%;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    padding: 0vw 10vw;
+}
+
+#page4-left{
+    height:100vh;
+    width:40%;
+    padding:8vw 0vw;
+
+}
+
+#page4-right{
+    height:100vh;
+    width:50%;
+    padding:6vw 0vw;
+
+}
+
+#page4-left h2{
+    font-size: 3.5vw;
+    color: #111;
+    font-weight: 900;
+}
+
+#page4-right h6,p{
+    color: #000;
+}
+
+#page4-right h6{
+    color:#A3A3A3;
+    font-size: 15px;
+    padding:3vw 0vw;
+}
+
+#page4-right .first-para{
+    padding-bottom: 3vw;
+}
+
+#page4-right p{
+    font-size: 26px;
 }
