--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -371,6 +371,7 @@ nav button svg{
     align-items: center;
     position: relative;
     padding: 0vw 10vw;
+    border-bottom: 1px solid #c2c2c2;
 }
 
 #page4-left{
@@ -403,10 +404,67 @@ nav button svg{
     padding:3vw 0vw;
 }
 
-#page4-right .first-para{
-    padding-bottom: 3vw;
-}
-
 #page4-right p{
     font-size: 26px;
+}
+
+#page5{
+    height:100vh;
+    width:100%;
+    padding: 8vw 0vw;
+    padding-left: 3vw;
+    padding-right: 2vw;
+    background-color: #fff;
+    display:flex;
+
+}
+
+.box-section{
+    height:100vh;
+    width:100vw;
+    display:flex;
+    justify-content: center;
+    overflow: hidden;
+    column-gap: 1vw;
+    row-gap: 0.2vw;
+    flex-wrap: wrap;
+
+}
+
+.box{
+    width:30vw;
+    height:20vw;
+    background-color:#F5F5F5;
+    padding: 2vw 3vw;
+}
+
+.box h1{
+     color: black;
+     font-weight: 500;
+     font-size:5vw;
+     letter-spacing: 3px;
+     padding-bottom: 2vw; 
+}
+
+.box p{
+    padding-bottom: 6vw;
+}
+
+#page6{
+    height:100vh;
+    width:100%;
+    border: 1px solid black;
+    margin-top:10vw;
+    position: relative;
+    padding:4vw 4vw;
+}
+
+#page6 p{
+    font-size: 1.5vw;
+}
+
+#page6 h3{
+    font-size: 2vw;
+    background-color: black;
+
 }
