--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -453,18 +453,89 @@ nav button svg{
 #page6{
     height:100vh;
     width:100%;
-    border: 1px solid black;
-    margin-top:10vw;
     position: relative;
-    padding:4vw 4vw;
+    padding:0vw 7vw;
+    padding-top: 25vh;
+    display: flex;
+    justify-content: flex-end;
+    /* border-bottom: 1px solid black; */
 }
 
 #page6 p{
     font-size: 1.5vw;
+    position: absolute;
+    bottom:65%;
+    left:20%;
 }
 
-#page6 h3{
-    font-size: 2vw;
-    background-color: black;
+#page6 h1{
+    font-size: 3vw;
+    font-weight: 400;
+    color: black;
+    direction: rtl;
+    line-height: 50px;
+}
 
+#page7{
+    min-height:100vh;
+    width:100%;
+    background-color: #fff;
+    position: relative;
+    color: #000;
+}
+
+.section {
+    width: 100%;
+    height: 72vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 13vh 10vw;
+    padding-bottom: 0;
+}
+
+.sec-left {
+    height: 100%;
+    width: 25%;
+    padding-top: 3vh;
+    /* background-color: aqua; */
+    border-top: 2px solid #000;
+
+}
+
+.sec-left h2 {
+    font-size: 2.1vw;
+    font-weight: 500;
+    color: #000;
+}
+
+.sec-left p {
+    color: #000;
+    margin-top: 10vh;
+    font-size: 1.2vw;
+    /* width: 80%; */
+}
+
+.sec-right {
+    height: 100%;
+    width: 70%;
+    background-color: blanchedalmond;
+    position: relative;
+}
+
+.sec-right img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.sec-right video {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity ease 0.1s;
 }
