--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -499,7 +499,13 @@ nav button svg{
     width: 25%;
     padding-top: 3vh;
     /* background-color: aqua; */
-    border-top: 2px solid #000;
+    border-top: 1px solid #000;
+
+}
+
+.sec-left:hover{
+    border-top: 3px solid #000;
+    transition: all ease 0.5s;
 
 }
 
@@ -538,4 +544,67 @@ nav button svg{
     object-fit: cover;
     opacity: 0;
     transition: opacity ease 0.1s;
+}
+
+#page8{
+    height:100vh;
+    width:100%;
+    background-color: #fff;
+    color: #000;
+    padding:4vh 7vw;
+    direction:rtl;
+    display: flex;
+    gap:20px;
+
+}
+
+#card{
+    height:80vh;
+    width:32%;
+    background-color: #fff;
+    color: #000;
+    border-top: 2px solid #A3A3A3;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    direction:ltr;
+    position: relative;
+}
+
+#card h2,i{
+    color: #000;
+    text-align: left;
+    padding-top: 2vh;
+    font-size: 3vw;
+}
+
+#card svg{
+    padding-top: 6vh;
+    text-align: left;
+
+}
+
+#card p{
+    font-size: 1.3vw;
+    padding-top: 6vh;
+}
+
+#card img{
+    height:60vh;
+    width:25vw;
+    padding-top:4vw;
+    position: relative;
+
+}
+
+#card video{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity ease 0.5s;
+
 }
