--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -571,6 +571,10 @@ nav button svg{
     position: relative;
 }
 
+#card:hover{
+    border-top: 3px solid black;
+}
+
 #card h2,i{
     color: #000;
     text-align: left;
