--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -635,17 +635,18 @@ nav button svg{
     width:100%;
     background-color: #000;
     padding:5vh 10.9vw;
+    position: relative;
     display:flex;
     justify-content: space-between;
     align-items: flex-start;
 }
 
-#page9 button{
+#page9>button{
     background-color: #0BA34E;
     text-align: center;
     font-size: 1vw;
     font-weight: 600;
-    padding:20px 40px;
+    padding:1vw 2.5vw;
     border-radius: 70px;
     border: none;
 }
@@ -656,6 +657,38 @@ nav button svg{
 
  #page9-right p{
     color:white;
-    font-size: 2.2vw;
-     
+    font-size: 2.3vw;
 }
+
+ #page9-right>p span{
+            width:15vw;
+            display: inline-block;
+            font-size: 1.1vw;
+
+ }
+
+ #page9-content{
+    width:100%;
+    /* background-color: red; */
+    margin-top:5vh;
+    padding: 5vh 0;
+    border-top: 2px solid #fff;
+ }
+
+ #page9-content>h1{
+    font-size:3vw;
+ }
+
+ #page9-content #flex{
+    display: flex;
+    gap:5px;
+    margin-top:4vh;
+ }
+
+ #page9-content #flex h4{
+    border-radius: 50px;
+    border:1px solid white;
+    padding:10px 20px;
+    font-weight: 500;
+    font-size: 0.8vw;
+ }
