--- a/lazrev/style.css
+++ b/lazrev/style.css
@@ -655,7 +655,7 @@ nav button svg{
     width:70%;
 }
 
- #page9-right p{
+ #page9-right>p{
     color:white;
     font-size: 2.3vw;
 }
@@ -683,6 +683,7 @@ nav button svg{
     display: flex;
     gap:5px;
     margin-top:4vh;
+    margin-bottom:4vh;
  }
 
  #page9-content #flex h4{
@@ -691,4 +692,31 @@ nav button svg{
     padding:10px 20px;
     font-weight: 500;
     font-size: 0.8vw;
+ }
+
+
+ .page9-elem{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding-top :2vh;
+    padding-bottom: 9vh;
+    background-color: red;
+ }
+
+ .page9-elem h3{
+    font-size: 1.5vw;
+    font-weight: 700;
+ }
+
+ .page9-elem p{
+    color: #fff;
+    width: 55%;
+    font-size: 1vw;
+ }
+
+ .page9-elem i {
+    font-size: 1vw;
+    color: #fff;
+
  }
